<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen	xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <PreferenceCategory
		android:title="Server Sync Settings"> 
		<EditTextPreference
        	android:title="Server URL"
			android:visibility="gone"
            android:summary="Sync Cloud Server"
            android:key="serverURL"/> -->
<!-- 		<CheckBoxPreference
		    android:key="PREF_AUTO_UPDATE"
			android:title="Auto sync"
			android:summary="Select to turn on automatic updating" 
			android:defaultValue="false"
		/> 
		<ListPreference
		    android:key="PREF_UPDATE_FREQ" 
		    android:title="Refresh frequency" 
		    android:summary="Frequency at which to sync with the server" 
		    android:entries="@array/update_freq_options"
		    android:entryValues="@array/update_freq_values" 
		    android:dialogTitle="Sync frequency" 
		    android:defaultValue="60" 
		/>
	</PreferenceCategory>-->
    <PreferenceCategory	
		android:title="@string/user_credentials">
		<EditTextPreference
        	android:title="@string/username"
            android:summary="@string/passbook_hint"
            android:key="userName"
			android:dialogTitle="@string/passbookNumber"
			android:hint="@string/passbook_hint"/>
		<EditTextPreference
        	android:title="@string/password"
            android:summary="@string/password_hint"
            android:key="password"
            android:inputType="textPassword"
			android:hint="@string/password_hint"/>
	<!-- 		<EditTextPreference
                android:title="Tenant Id"
                android:summary="Tenant Id"
                android:key="tenantId"/> -->
            <!--<CheckBoxPreference
                android:title="Live"
                android:summary="Payment Gateway Live Enable"
                android:key="payuLive"
                />-->
		<ListPreference
			android:key="lang_preference"
			android:title="@string/language"
			android:entries="@array/lang_list_preference"
			android:entryValues="@array/langvalues_list_preference"
			android:dialogTitle="@string/selectLanguage" />
        </PreferenceCategory>
    <!--     <PreferenceCategory
            android:title="Location Settings">
            <CheckBoxPreference
                android:key="PREF_LOCATION_AUTO_SAVE"
                android:title="Auto Save Locations"
                android:summary="Select to turn off automatic saving of locations"
                android:defaultValue="false"
            />
            <ListPreference
                android:key="PREF_LOCATION_SAVE_FREQ"
                android:title="Save frequency"
                android:summary="Frequency at which location details are saved"
                android:entries="@array/location_save_freq_options"
                android:entryValues="@array/location_save_freq_values"
                android:dialogTitle="Save frequency"
                android:defaultValue="15"
            />
        </PreferenceCategory> -->
</PreferenceScreen>