<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/title_about"/>


    </group>
    <group android:id="@+id/group_changePassword">
        <item
            android:id="@+id/action_change_password"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/changePassword">

        </item>
    </group>

    <item android:title="@string/menu_preferences">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/action_settings"/>
        </menu>
    </item>

    <group android:id="@+id/group_location" android:visible="false">
        <item android:title="@string/action_location" >
            <menu>
                <item
                    android:id="@+id/action_location"
                    android:icon="@drawable/ic_location_24dp"
                    android:title="@string/action_location"/>

            </menu>
        </item>
    </group>

    <group android:id="@+id/group_analytics_sales" android:visible="false" >
        <item android:title="Analytics" >
            <menu>
                <item
                    android:id="@+id/action_sales"
                    android:icon="@drawable/analytics_24dp"
                    android:title="Sales"/>

            </menu>
        </item>
    </group>

</menu>
