<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listheader_border">
    <TextView android:id="@+id/column_stock_name_header"
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:padding="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        />
    <TextView android:id="@+id/column_stock_qty_header"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:padding="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        />
    <TextView android:id="@+id/column_stock_price_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/unit_price"
        />
    <ImageView
        android:id="@+id/transporterRowArrow"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:src="@drawable/arrow" />
</LinearLayout>