<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/db1_root"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="6dip"
        android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/indentsOrdersLayout"                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_profile"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/employeeprofile_button"
                    android:onClick="onClickFeature"
                    android:text="@string/my_profile" />

                <Button
                    android:id="@+id/home_btn_supppo"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/po_button"
                    android:onClick="onClickFeature"
                    android:text="@string/purchase_orders" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/paymentsCatalogLayout"                                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_payments"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/payments_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature3" />

                <Button
                    android:id="@+id/home_btn_transporters"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/transporter_button"
                    android:onClick="onClickFeature"
                    android:text="@string/transporters" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

        </LinearLayout>
          
        </LinearLayout>

</ScrollView>