<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context="in.vasista.vsales.IndentDetailed">

    <Button
        android:id="@+id/gotoShipments"
        android:text="Shipments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">
    <TableLayout
        android:layout_width="match_parent"
        android:shrinkColumns="2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:showDividers="middle"
        android:layout_height="wrap_content">


        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/order_date"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/order_number"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:visibility="gone"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/generated_po"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/generated_po"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow android:paddingTop="5dip"
            android:id="@+id/po_seq_row"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/po_sequence_no"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/po_sequence_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/supplier_name"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/scheme_type"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/status_id"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/status_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/discount_amount"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/disc_amnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/order_total"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/paid_ammount"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/paid_ammount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/balance_ammount"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/balance_ammount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
        <TableRow android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                style="@style/TabeRowTitle"
                android:text="@string/transporter_name"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=":"/>
            <TextView
                android:id="@+id/t_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabeRowValue"
                android:layout_margin="2dp" />
        </TableRow>
    </TableLayout>
    </ScrollView>
    <fragment
        android:id="@+id/indentitems_list_fragment"
        android:name="in.vasista.vsales.indent.IndentItemsListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
